--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <li>
+                    <a href="#">Inicio</a>
+                  </li>
+              <li>
+                <a href="#">Torneos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+              <li>
+                <a href="#">Dojos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+              <li>
+                <a href="#">Personajes</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <li>
+                <a href="#">Rivalidades</a>
               </li>
             </ul>
           </div>
