--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <img src="./recursos-img/aa-logofinal.png" alt="Karate kid">
-          <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <nav class="navbar navbar-expand-lg bg-warning">
+        <!-- <div class="container-fluid"></div> -->
+            <a href="./index.html"><img src="./recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <section class="text-nav">
+            <ul class="nav-ul">
+              <!-- "navbar-nav" -->
                 <li>
                     <a href="#">Inicio</a>
                   </li>
@@ -32,10 +34,11 @@
                 <a href="#">Rivalidades</a>
               </li>
             </ul>
+        </section>
           </div>
         </div>
       </nav> 
-    <h1>Hello, world!</h1>
+    <h1>Karate kid</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
