--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-warning">
         <!-- <div class="container-fluid"></div> -->
-            <a href="./index.html"><img src="./recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
+            <a href="../index.html"><img src="../recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -19,26 +19,26 @@
             <ul class="nav-ul">
               <!-- "navbar-nav" -->
                 <li>
-                    <a href="./index.html">Inicio</a>
+                    <a href="../index.html">Inicio</a>
                   </li>
               <li>
-                <a href="./pages/torneo.html">Torneos</a>
+                <a href="./torneo.html">Torneos</a>
               </li>
               <li>
-                <a href="./pages/dojos.html">Dojos</a>
+                <a href="./dojos.html">Dojos</a>
               </li>
               <li>
-                <a href="./pages/personajes.html">Personajes</a>
+                <a href="./personajes.html">Personajes</a>
               </li>
               <li>
-                <a href="./pages/rivalidades.html">Rivalidades</a>
+                <a href="./rivalidades.html">Rivalidades</a>
               </li>
             </ul>
         </section>
           </div>
         </div>
       </nav> 
-    <h1>Karate kid</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+      <h1>Personajes</h1>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+  </html>
