--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -38,7 +38,16 @@
           </div>
         </div>
       </nav> 
-      <h1>All-Valley</h1>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
-  </html>
+      <header class="header-index"></header>
+    <h1>All-Valley</h1>
+  </header>
+  <main class="main-index">
+
+  </main>
+
+  </body>
+  <footer>
+<a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer" alt="Logo Netflix"></a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</html>
