--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -1,53 +1,71 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>All-Valley</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-warning">
-        <!-- <div class="container-fluid"></div> -->
-            <a href="../index.html"><img src="../recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <section class="text-nav">
-            <ul class="nav-ul">
-              <!-- "navbar-nav" -->
-                <li>
-                    <a href="../index.html">Inicio</a>
-                  </li>
-              <li>
-                <a href="./torneo.html">Torneos</a>
-              </li>
-              <li>
-                <a href="./dojos.html">Dojos</a>
-              </li>
-              <li>
-                <a href="./personajes.html">Personajes</a>
-              </li>
-              <li>
-                <a href="./rivalidades.html">Rivalidades</a>
-              </li>
-            </ul>
-        </section>
-          </div>
-        </div>
-      </nav> 
-      <header class="header-index"></header>
-    <h1>All-Valley</h1>
-  </header>
-  <main class="main-index">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>All-Valley</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-warning">
+    <!-- <div class="container-fluid"></div> -->
+    <a href="../index.html"><img src="../recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <section class="text-nav">
+        <ul class="nav-ul">
+          <!-- "navbar-nav" -->
+          <li>
+            <a href="../index.html">Inicio</a>
+          </li>
+          <li>
+            <a href="./torneo.html">Torneos</a>
+          </li>
+          <li>
+            <a href="./dojos.html">Dojos</a>
+          </li>
+          <li>
+            <a href="./personajes.html">Personajes</a>
+          </li>
+          <li>
+            <a href="./rivalidades.html">Rivalidades</a>
+          </li>
+        </ul>
+      </section>
+    </div>
+    </div>
+  </nav>
+  <section class="h1">
+    <h1>All-Valley</h1>
+  </section>
+  <header class="header-index">
+    <section class="header-torneo">
+      <img src="../recursos-img/all.valley.jpeg" alt="Logo All Valley">
+    </section>
+  </header>
+  <main class="main-all-valley">
+    <section class="videos">
+      <video controls muted loop autoplay src="../recursos-img/all-valley-1.mp4"></video>
+      <video controLs muted Loop autoplayed src="../recursos-img/patadadelagrulla.mp4"></video>
+      <video controLs muted Loop autoplayed src="../recursos-img/md-campeon.mp4"></video>
+      <video controLs muted Loop autoplayed src="../recursos-img/hm-campeon.mp4"></video>
+      <video controLs muted Loop autoplayed src="../recursos-img/Final Femenina Torneo All Valley. (Tory vs Sam).mp4"></video>
+    </section>
   </main>
 
-  </body>
-  <footer>
-<a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer" alt="Logo Netflix"></a>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+<footer>
+  <a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer"
+      alt="Logo Netflix"></a>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
