videos listos + campeones

--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -45,21 +45,45 @@
   <section class="h1">
     <h1>All-Valley</h1>
   </section>
-  <header class="header-index">
+  <!-- <header class="header-index">
     <section class="header-torneo">
       <img src="../recursos-img/all.valley.jpeg" alt="Logo All Valley">
     </section>
-  </header>
+  </header> -->
   <main class="main-all-valley">
+    <section class="img-all-valley"></section>
+    <img src="../recursos-img/all.valley.jpeg" alt="Logo All Valley">
+  </section>
     <section class="videos">
-      <video controls muted loop autoplay src="../recursos-img/all-valley-1.mp4"></video>
+      <video controls muted loop autoplyed src="../recursos-img/all-valley-1.mp4"></video>
       <video controLs muted Loop autoplayed src="../recursos-img/patadadelagrulla.mp4"></video>
       <video controLs muted Loop autoplayed src="../recursos-img/md-campeon.mp4"></video>
       <video controLs muted Loop autoplayed src="../recursos-img/hm-campeon.mp4"></video>
       <video controLs muted Loop autoplayed src="../recursos-img/Final Femenina Torneo All Valley. (Tory vs Sam).mp4"></video>
     </section>
   </main>
-
+<div>
+  <section class="campeones-all-valley">
+    <ul>
+      <h2>Campeones All Valley</h2>
+     <li>
+      <h3>Johnny Lawrence</h3>
+     </li>
+     <li>
+      <h3>Daniel LaRuso</h3>
+     </li>
+     <li>
+      <h3>Miguel Diaz</h3>
+     </li>
+     <li>
+      <h3>Eli "Hawk" Moskowitz</h3>
+     </li>
+     <li>
+      <h3>Tory Nichols</h3>
+     </li>
+    </ul>
+  </section>
+</div>
 </body>
 <footer>
   <a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer"
