--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -66,19 +66,32 @@
   <section class="campeones-all-valley">
     <ul>
       <h2>Campeones All Valley</h2>
-     <li>
-      <h3>Johnny Lawrence</h3>
+     <li class="li-lawrence">
+      <h3>Johnny Lawrence</h3><br>
+      <p>Campeon 1983 <br>
+      Campeon 1984 <br>
+    Dojo: Cobra Kai</p>
      </li>
-     <li>
-      <h3>Daniel LaRuso</h3>
+     <li class="li-larusso">
+      <h3>Daniel LaRusso</h3><br>
+      <p>Campeon 1985 <br>
+        Campeon 1986 <br>
+      Dojo: Miyagi-do Karate</p>
      </li>
-     <li>
-      <h3>Miguel Diaz</h3>
+     <li class="li-xander">
+      <h3>Xander Stone</h3><br>
+      <p>Campeon 2020 <br>
+      Dojo: Topanga Karate</p>
      </li>
-     <li>
+     <li class="li-diaz">
+      <h3>Miguel Diaz</h3><br>
+      <p>Campeon 2021 <br>
+      Dojo: Miyagi-do Karate</p>
+     </li>
+     <li class="li-hawk">
       <h3>Eli "Hawk" Moskowitz</h3>
      </li>
-     <li>
+     <li class="li-nichols">
       <h3>Tory Nichols</h3>
      </li>
     </ul>
