imagenes tres primeros campeones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
 </head>
-<body">
+<body>
   <nav class="navbar navbar-expand-lg bg-warning">
     <!-- <div class="container-fluid"></div> -->
     <a href="./index.html"><img src="./recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
