--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -62,37 +62,47 @@
       <video controLs muted Loop autoplayed src="../recursos-img/Final Femenina Torneo All Valley. (Tory vs Sam).mp4"></video>
     </section>
   </main>
-<div>
+<div class="div-torneo">
   <section class="campeones-all-valley">
     <ul>
-      <h2>Campeones All Valley</h2>
+      <h2>Campeones del All Valley</h2>
      <li class="li-lawrence">
       <h3>Johnny Lawrence</h3><br>
       <p>Campeon 1983 <br>
       Campeon 1984 <br>
-    Dojo: Cobra Kai</p>
+    Dojo: Cobra Kai</p><br>
+    <img src="../recursos-img/jj---lawerence-----kk1.png" alt="Johnny Lawrence">
      </li>
      <li class="li-larusso">
       <h3>Daniel LaRusso</h3><br>
       <p>Campeon 1985 <br>
         Campeon 1986 <br>
-      Dojo: Miyagi-do Karate</p>
+      Dojo: Miyagi-do Karate</p><br>
+      <img src="../recursos-img/daniel---el---lokillo---.png" alt="Daniel LaRusso">
      </li>
      <li class="li-xander">
       <h3>Xander Stone</h3><br>
       <p>Campeon 2020 <br>
-      Dojo: Topanga Karate</p>
+      Dojo: Topanga Karate</p><br>
+      <img src="../recursos-img/xanderpiedra.png" alt="Xander Stone">
      </li>
      <li class="li-diaz">
       <h3>Miguel Diaz</h3><br>
       <p>Campeon 2021 <br>
-      Dojo: Miyagi-do Karate</p>
+      Dojo: Miyagi-do Karate</p><br>
+      <img src="#" alt="">
      </li>
      <li class="li-hawk">
-      <h3>Eli "Hawk" Moskowitz</h3>
+      <h3>Eli "Hawk" Moskowitz</h3><br>
+      <p>Campeon 2022 <br>
+        Dojo: Miyagi-do Karate</p><br>
+        <img src="#" alt="">
      </li>
      <li class="li-nichols">
-      <h3>Tory Nichols</h3>
+      <h3>Tory Nichols</h3><br>
+      <p>Campeona 2022 <br>
+        Dojo: Cobra Kai</p><br>
+        <img src="#" alt="">
      </li>
     </ul>
   </section>
