--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -1,53 +1,82 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Personajes Karate Kid/Cobra Kai</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-warning">
-        <!-- <div class="container-fluid"></div> -->
-            <a href="../index.html"><img src="../recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <section class="text-nav">
-            <ul class="nav-ul">
-              <!-- "navbar-nav" -->
-                <li>
-                    <a href="../index.html">Inicio</a>
-                  </li>
-              <li>
-                <a href="./torneo.html">Torneos</a>
-              </li>
-              <li>
-                <a href="./dojos.html">Dojos</a>
-              </li>
-              <li>
-                <a href="./personajes.html">Personajes</a>
-              </li>
-              <li>
-                <a href="./rivalidades.html">Rivalidades</a>
-              </li>
-            </ul>
-        </section>
-          </div>
-        </div>
-      </nav> 
-      <header class="header-index"></header>
-      <h1>Personajes</h1>
-    </header>
-    <main class="main-index">
-  
-    </main>
-  
-    </body>
-    <footer>
-  <a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer" alt="Logo Netflix"></a>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Personajes Karate Kid/Cobra Kai</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-warning">
+    <!-- <div class="container-fluid"></div> -->
+    <a href="../index.html"><img src="../recursos-img/aa-logofinal.png" class="img-logo" alt="Karate kid"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <section class="text-nav">
+        <ul class="nav-ul">
+          <!-- "navbar-nav" -->
+          <li>
+            <a href="../index.html">Inicio</a>
+          </li>
+          <li>
+            <a href="./torneo.html">Torneos</a>
+          </li>
+          <li>
+            <a href="./dojos.html">Dojos</a>
+          </li>
+          <li>
+            <a href="./personajes.html">Personajes</a>
+          </li>
+          <li>
+            <a href="./rivalidades.html">Rivalidades</a>
+          </li>
+        </ul>
+      </section>
+    </div>
+    </div>
+  </nav>
+  <header class="header-index"></header>
+  <h1>Personajes</h1>
+  </header>
+  <main class="main-personajes">
+    <div class="grilla-personajes">
+      <section class="eagle-fang-theme">Jonny Lawrence<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Daniel LaRusso<img src="" alt=""></section>
+      <section class="eagle-fang-theme">Miguel Diaz<img src="" alt=""></section>
+      <section class="cobrakai-theme">Robby Keene<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Samantha LaRusso<img src="" alt=""></section>
+      <section class="cobrakai-theme">Tory Nichols<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Eli "Hawk Moskowits"<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Demetri<img src="" alt=""></section>
+      <section class="cobrakai-theme">Mike Barnes<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Chozen Toguchi<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Sr.Miyagi<img src="" alt=""></section>
+      <section class="cobrakai-theme">Terry Silver<img src="" alt=""></section>
+      <section class="cobrakai-theme">John Kreese<img src="" alt=""></section>
+      <section class="miyagi-do-theme">Anthony LaRusso<img src="" alt=""></section>
+      <section class="cobrakai-theme">Kyler Park<img src="" alt=""></section>
+      <section class="nothing">Amanda LaRusso<img src="" alt=""></section>
+      <section class="cobrakai-theme">Kenny Payne<img src="" alt=""></section>
+      <section class="cobrakai-theme">Raymond "Stingray" Porter<img src="" alt=""></section>
+      <section class="nothing">Carmen Diaz<img src="" alt=""></section>
+      <section class="nothing">Ali Mills<img src="" alt=""></section>
+    </div>
+
+  </main>
+
+</body>
+<footer>
+  <a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer"
+      alt="Logo Netflix"></a>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+</html>
