--- a/pages/torneo.html
+++ b/pages/torneo.html
@@ -90,19 +90,19 @@
       <h3>Miguel Diaz</h3><br>
       <p>Campeon 2021 <br>
       Dojo: Miyagi-do Karate</p><br>
-      <img src="#" alt="">
+      <img src="../recursos-img/migui---png---posible.png" alt="Miguel Diaz">
      </li>
      <li class="li-hawk">
       <h3>Eli "Hawk" Moskowitz</h3><br>
       <p>Campeon 2022 <br>
         Dojo: Miyagi-do Karate</p><br>
-        <img src="#" alt="">
+        <img src="../recursos-img/no-cre0-hawk.png" alt="Hawk">
      </li>
      <li class="li-nichols">
       <h3>Tory Nichols</h3><br>
       <p>Campeona 2022 <br>
         Dojo: Cobra Kai</p><br>
-        <img src="#" alt="">
+        <img src="../recursos-img/nocreonocreo---tory.png" alt="Tory Nichols">
      </li>
     </ul>
   </section>
