--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -47,26 +47,96 @@
   </header>
   <main class="main-personajes">
     <div class="grilla-personajes">
-      <section class="eagle-fang-theme">Jonny Lawrence<img src="../recursos-img/johnnylawrence-kka1.jpeg" alt="Johnny Lawrence"></section>
-      <section class="miyagi-do-theme">Daniel LaRusso<img src="../recursos-img/daniel-larussokk1.jpeg" alt="Daniel LaRusso"></section>
-      <section class="eagle-fang-theme">Miguel Diaz<img src="../recursos-img/miguel.webp" alt="Miguel Diaz"></section>
-      <section class="cobrakai-theme">Robby Keene<img src="../recursos-img/robbykeene-ck1.jpeg" alt="Robby Keene"></section>
-      <section class="miyagi-do-theme">Samantha LaRusso<img src="../recursos-img/sam-larusso.webp" alt="Sam LaRusso"></section>
-      <section class="cobrakai-theme">Tory Nichols<img src="../recursos-img/Tory-Nichols-Cobra-Kai.webp" alt="Tory Nichols"></section>
-      <section class="miyagi-do-theme">Eli "Hawk Moskowits"<img src="../recursos-img/hawk.personajes.webp" alt="Hawk"></section>
-      <section class="miyagi-do-theme">Demetri<img src="../recursos-img/demetri-boludo.webp" alt="Demetri"></section>
-      <section class="cobrakai-theme">Mike Barnes<img src="../recursos-img/mikebarnes-kk3.jpg" alt="Mike Barnes"></section>
-      <section class="miyagi-do-theme">Chozen Toguchi<img src="../recursos-img/chozentoguchi.webp" alt="Chozen Toguchi"></section>
-      <section class="miyagi-do-theme">Sr.Miyagi<img src="../recursos-img/miyagifotopersona.webp" alt="Sr.Miyagi"></section>
-      <section class="cobrakai-theme">Terry Silver<img src="../recursos-img/Terry_Silver_personaje.webp" alt="Terry Silver"></section>
-      <section class="cobrakai-theme">John Kreese<img src="../recursos-img/John_Kreese_Young.webp" alt="John Kreese"></section>
-      <section class="miyagi-do-theme">Anthony LaRusso<img src="../recursos-img/anthonylarusso.jpg" alt="Anthonylarusso"></section>
-      <section class="cobrakai-theme">Kyler Park<img src="../recursos-img/KylerSeason4.webp" alt="Kyler Park"></section>
-      <section class="nothing">Amanda LaRusso<img src="../recursos-img/amandalarusso.webp" alt="Amanda LaRusso"></section>
-      <section class="cobrakai-theme">Kenny Payne<img src="../recursos-img/kennypayne....webp" alt="Kenny Payne"></section>
-      <section class="cobrakai-theme">Raymond "Stingray" Porter<img src="../recursos-img/mantaraya....webp" alt="Stingray"></section>
-      <section class="nothing">Carmen Diaz<img src="../recursos-img/carmen.webp" alt="Carmen Diaz"></section>
-      <section class="nothing">Ali Mills<img src="../recursos-img/Ali_Mills_1984.jpg" alt="Ali Mils"></section>
+      <section class="eagle-fang-theme">Jonny Lawrence
+        <img src="../recursos-img/johnnylawrence-kka1.jpeg" alt="Johnny Lawrence">
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Eagle Fang Karate </li><li>Padre de Robby  </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="miyagi-do-theme">Daniel LaRusso
+        <img src="../recursos-img/daniel-larussokk1.jpeg" alt="Daniel LaRusso">
+        <div class="accordion accordion-flush" id="accordionFlushExample"> 
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Ver Mas
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"><li> Bicampeon del All Valley </li><li>Sensei en Eagle Fang Karate </li><li>Padre de Robby  </li> 
+            </div>
+          </div>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">  
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="eagle-fang-theme">Miguel Diaz
+        <img src="../recursos-img/miguel.webp" alt="Miguel Diaz">
+      </section>
+      <section class="cobrakai-theme">Robby Keene
+        <img src="../recursos-img/robbykeene-ck1.jpeg" alt="Robby Keene">
+      </section>
+      <section class="miyagi-do-theme">Samantha LaRusso
+        <img src="../recursos-img/sam-larusso.webp" alt="Sam LaRusso">
+      </section>
+      <section class="cobrakai-theme">Tory Nichols
+        <img src="../recursos-img/Tory-Nichols-Cobra-Kai.webp" alt="Tory Nichols">
+      </section>
+      <section class="miyagi-do-theme">Eli "Hawk" Moskowits
+        <img src="../recursos-img/hawk.personajes.webp" alt="Hawk">
+      </section>
+      <section class="miyagi-do-theme">Demetri <br>
+        <img src="../recursos-img/demetri-boludo.webp" alt="Demetri">
+      </section>
+      <section class="cobrakai-theme">Mike Barnes
+        <img src="../recursos-img/mikebarnes-kk3.jpg" alt="Mike Barnes">
+      </section>
+      <section class="miyagi-do-theme">Chozen Toguchi
+        <img src="../recursos-img/chozentoguchi.webp" alt="Chozen Toguchi">
+      </section>
+      <section class="miyagi-do-theme">Sr.Miyagi
+        <img src="../recursos-img/miyagifotopersona.webp" alt="Sr.Miyagi">
+      </section>
+      <section class="cobrakai-theme">Terry Silver
+        <img src="../recursos-img/Terry_Silver_personaje.webp" alt="Terry Silver">
+      </section>
+      <section class="cobrakai-theme">John Kreese
+        <img src="../recursos-img/John_Kreese_Young.webp" alt="John Kreese">
+      </section>
+      <section class="miyagi-do-theme">Anthony LaRusso
+        <img src="../recursos-img/anthonylarusso.jpg" alt="Anthonylarusso">
+      </section>
+      <section class="cobrakai-theme">Kyler Park
+        <img src="../recursos-img/KylerSeason4.webp" alt="Kyler Park">
+      </section>
+      <section class="nothing">Amanda LaRusso
+        <img src="../recursos-img/amandalarusso.webp" alt="Amanda LaRusso">
+      </section>
+      <section class="cobrakai-theme">Kenny Payne
+        <img src="../recursos-img/kennypayne....webp" alt="Kenny Payne">
+      </section>
+      <section class="cobrakai-theme">Stingray <br>
+        <img src="../recursos-img/mantaraya....webp" alt="Stingray">
+      </section>
+      <section class="nothing">Carmen Diaz
+        <img src="../recursos-img/carmen.webp" alt="Carmen Diaz">
+      </section>
+      <section class="nothing">Ali Mills <br>
+        <img src="../recursos-img/Ali_Mills_1984.jpg" alt="Ali Mils">
+      </section>
     </div>
 
   </main>
