--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -42,8 +42,9 @@
     </div>
     </div>
   </nav>
-  <header class="header-index"></header>
-  <h1>Personajes</h1>
+  <section class="h1">
+    <h1>Personajes</h1>
+  </section>
   </header>
   <main class="main-personajes">
     <div class="grilla-personajes">
