--- a/pages/rivalidades.html
+++ b/pages/rivalidades.html
@@ -42,8 +42,10 @@
     </div>
     </div>
   </nav>
+  <section class="h1">
+    <h1>Rivalidades</h1>
+  </section>
   <main class="main-rivalidades"></main>
-  <h1>Rivalidades</h1>
   <div class="main-rivalidades-grilla">
     <section>
       <h4>Johnny Lawrence VS Daniel LaRusso</h4>
