intento ya perdi la cuenta

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -368,7 +368,7 @@
       </div>
   </section>
 
-  <!-- Carmen Diaz -->
+  <!-- Carmen Diaz
   <section class="nothing personaje-section">
       <h2>Carmen Diaz</h2>
       <img src="../recursos-img/carmen.webp" alt="Carmen Diaz">
@@ -385,7 +385,7 @@
       </div>
   </section>
 
-  <!-- Ali Mills -->
+  Ali Mills
   <section class="nothing personaje-section">
       <h2>Ali Mills</h2>
       <img src="../recursos-img/Ali_Mills_1984.jpg" alt="Ali Mills">
@@ -400,7 +400,7 @@
               </ul>
           </div>
       </div>
-  </section>
+  </section> -->
 
 
   </div>
