--- a/pages/rivalidades.html
+++ b/pages/rivalidades.html
@@ -45,7 +45,7 @@
   <section class="h1">
     <h1>Rivalidades</h1>
   </section>
-  <main class="main-rivalidades"></main>
+  <main class="main-rivalidades">
   <div class="main-rivalidades-grilla">
     <section>
       <h4>Johnny Lawrence VS Daniel LaRusso</h4>
@@ -68,7 +68,7 @@
       <img src="../recursos-img/kreese--vs--daniel.webp" alt="Kreese VS Daniel">
     </section>
   </div>
-
+</main>
 </body>
 <footer>
   <a href="https://www.netflix.com/browse"><img src="../recursos-img/netflixlogo.png" class="img-footer"
